# code-radar

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json  test_async_sync.py  test_auto_sync_scenarios.py  test_codebase.py  test_e2e.py  test_embed.py  test_filepath_filter.py  test_hash_kv.py  test_mcp_tools.py  test_sparse_index.py  test_state.py  test_sync.py  test_watcher.py  test_workspace_isolation.py  test_workspace_root_resolution.py
code_radar/: __main__.py  benchmark.py  chroma.py  chunker.py  codebase.py  config.py  constants.py  envvars.py  hash_kv.py  logging.py  models.py  profiles.py  reader.py  sparse_index.py  state.py  watcher.py  workspace.py
code_radar/cli/: __init__.py  db.py  helpers.py  main.py  model.py  profile.py  reranker.py  system.py
code_radar/engine/: __init__.py  _engine.py  _helpers.py
code_radar/reranker/: __init__.py  _helpers.py  _reranker.py
code_radar/server/: __init__.py  app.py  search_utils.py  state.py  sync_runner.py  tools.py
